- Able to select out of more than 50 address books to add to address list.

29-05-2013 4.1.72
- Fixed Thai translation
- Updated German translation
- In ticket email templates, {contact:salutation} uses the ticket contact's set salutation.
- Fixed renderer for texts in grids
- Fixed comments response in actionDisplay for displaypanels
- ZpushAdmin: renamed comments into comment because comments was a reserved parameter in GO
- Better output of showing mailbox usages in Postfixadmin cron script.
- Better way of creating ZIP archive of e-mail attachments so that foreign characters will work on Windows
- Invalid event reminder property could prevent ActiveSync from syncing events.
- Removeduplicate functions in tasks, addressbooks and calendars are  now translatable
- $config['locale_all'] in config.php for Group-Office locale setting, example values are: "en_US.UTF-8" or "nb_NO.UTF-8".
- $config['tcpdf_font_size'] in config.php for font size in PDF exports, default is "9"

24-05-2013 4.1.71
- relational query cache didn't work
- Added supported models for Customfields so only the supported models can be chosen in the type selectbox.
- Remove duplicates buttons in calendar, tasklist and addressbook administration dialog
- Added query to remove duplicate participants in the cal_participants table. (Also adds "unique" on the event_id and email column)
- Received email attachments without a name will receive a default name.
- Fixed issue with the user calendar colors. (Sometimes it loads the wrong colors)

22-05-2013 4.1.70
- Template parser will not see {tag} with white spaces between { and } as tag to be replaced.
- The HTML email message CSS part will add style with new line characters to disable tag parsing
- Show maximum upload size.
- Reverted file thumbnail view by default
- Sales per month report for billing products
- Required custom fields are not validated server side to prevent errors when 
  hiding custom fields in the interface